# src/routes/api_hospital.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 use App\Http\Controllers\Hospital\AuthController;
 use App\Http\Controllers\Hospital\HospitalController;
+use App\Http\Controllers\Hospital\MenuController;
 use Illuminate\Support\Facades\Route;
 
 Route::middleware(['guest'])->group(static function () {
@@ -15,5 +16,10 @@ Route::middleware('auth:staffs')->group(static function () {
     Route::controller(HospitalController::class)->prefix('info')->name('info.')->group(static function () {
         Route::get('/', 'show')->name('show');
         Route::put('/', 'update')->name('update');
+    });
+    Route::resource('menus', MenuController::class)->only(['index', 'store', 'show', 'update', 'destroy']);
+    Route::controller(MenuController::class)->prefix('menus')->name('menus.')->group(static function () {
+        Route::post('{menu}/publish', 'publish')->name('publish');
+        Route::post('{menu}/unpublish', 'unpublish')->name('unpublish');
     });
 });
